[package]
name = "tower-diary"
version = "0.0.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
serde = { version = "1.0.215", features = ["derive"]}
egui = "0.29.1"
eframe = { version = "0.29.1", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4.22"
env_logger = "0.11.5"
